<resources>
    <string name="app_name">My Travels Diary</string>
    <string name="action_settings">Settings</string>
    <string name="text_start">Plan and memorize your best trips</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>


    <string name="app_user">User</string>
    <string name="app_password">Password</string>
    <string name="action_login">Login</string>
    <string name="app_connected">Connected?</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_copyright">Copyright Cristiana Passos</string>
    <string name="action_version">Version 1.7.0</string>
    <string name="action_insert">New Travel</string>
    <string name="insert_travel">Create New Travel</string>
    <string name="app_destiny">Destiny</string>
    <string name="app_days">Days</string>
    <string name="app_value">Value Travel</string>
    <string name="app_departureDate">Departure Date</string>
    <string name="app_returnDate">Return Date</string>
    <string name="app_hotel">Hotel</string>
    <string name="app_touristHotspots">Tourist Hotspots</string>
    <string name="action_create">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_remove">Remover</string>
    <string name="update_travel">Update Travel</string>
    <string name="action_update">Update</string>

    <string name="app_null">Not Null</string>
    <string name="app_delete_msg">Do you want to delete this item?</string>
    <string name="app_delete">Delete</string>
    <string name="app_close">Close</string>

    <string name="message_create">New Travel Create with Success</string>
    <string name="message_update"> Travel Update with Success</string>

    <string name="app_delete_final">Travel remove with Success</string>


</resources>
