<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fundo"
    tools:context="br.com.cristiana.mytravelsdiary.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="122dp"
        app:srcCompat="@drawable/cadastro"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilUser">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_user"
            android:layout_gravity="center_horizontal"
            android:id="@+id/edtUser"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilPassword">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_password"
            android:id="@+id/edtPassword"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/app_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/ckConnect"
        android:layout_weight="0.5"/>


    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:onClick="logar"
        />
</LinearLayout>
