<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="6dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_destiny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:text="@string/app_destiny"
                android:textColor="#fafafa"
                android:textSize="22sp"/>

        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"  >


            <TextView
                android:layout_weight="0.1"
                android:id="@+id/tv_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:padding="16dp"
                android:text="@string/app_value" />

            <TextView
                android:layout_weight="0.1"
                android:id="@+id/tv_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:padding="16dp"
                android:text="@string/app_hotel" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>